css/styles.css
.intro {
  font-weight: lighter;
}

.intro p {
  font-style: italic;
}

.intro img {
  border: medium dashed rgb(160, 137, 137);
}

.light-scheme {
  color: black;
  background-color: lightgrey;
}

.dark-scheme {
  color: lightgrey;
  background-color: darkslategrey;
}

.highlight {
  background-color: darkorange;
  border: 2px dashed red;
}

